# qldpc-builder

./: .gitignore  CITATION.cff  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: build_bb_decode.py
src/qldpc/: __init__.py  cli.py  connectivity.py  distance.py  linalg.py  metrics.py  registry.py  simulation.py  stim_export.py  types.py
src/qldpc/codes/: __init__.py  bb.py  css.py  gb.py  hgp.py
src/qldpc/decoders/: __init__.py  bp.py  bposd.py
src/qldpc/experiments/: __init__.py  scaling.py
src/qldpc/viz/: __init__.py  plots.py
tests/: test_codes.py  test_connectivity.py  test_decoders.py  test_distance.py  test_export.py  test_linalg.py  test_phenomenological.py  test_stim_export.py
