[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qldpc-builder"
version = "0.2.0"
description = "Construct quantum LDPC codes (bivariate-bicycle and generalized-bicycle families) and decode them with a from-scratch BP+OSD decoder, benchmarked against the surface code on encoding rate."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Andrew Fogelis" }]
keywords = ["quantum-error-correction", "qldpc", "bivariate-bicycle", "bp-osd", "belief-propagation", "ldpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.6", "stim>=1.12"]
stim = ["stim>=1.12"]
# Optional optimized BP-OSD backend. 'ldpc' has no wheels on the newest CPython
# releases, so the from-scratch decoder is the default and this is opt-in.
optimized = ["ldpc>=2.1"]

[project.scripts]
qldpc = "qldpc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["qldpc"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
